# vittam

./: package.json  pnpm-lock.yaml
chatbot/: .gitignore  nodemon.json  package.json  pnpm-lock.yaml  vite.config.ts
chatbot/src/: entry.ts
chatbot/src/services/: api.ts
chatbot/src/utils/: api.ts
chatbot/src/widget/: App.tsx  mounter.tsx
chatbot/src/widget/screens/: ChatScreen.tsx
client/: next.config.ts  package.json  pnpm-lock.yaml
client/src/app/: layout.tsx
client/src/app/(auth)/forgot-password/: page.tsx
client/src/app/(auth)/login/: action.ts  page.tsx
client/src/app/(auth)/register/: action.ts  page.tsx
client/src/app/(main)/: layout.tsx  page.tsx
client/src/app/(main)/contact/: page.tsx
client/src/app/api/kyc/: route.ts
client/src/app/api/offers/: route.ts
client/src/app/api/users/: route.ts
client/src/app/crm/: layout.tsx  page.tsx
client/src/app/crm/components/: KycPanel.tsx  OffersPanel.tsx  Sidebar.tsx  UsersPanel.tsx
client/src/app/crm/kyc/: page.tsx
client/src/app/crm/offers/: page.tsx
client/src/app/dashboard/: layout.tsx  page.tsx
client/src/components/marketing/: Header.tsx  HeroVideoSection.tsx
client/src/components/shared/: Analytics.tsx
client/src/lib/: cookie.ts  mongodb.ts
client/src/models/: Client.ts  Document.ts  Kyc.ts  OfferTemplate.ts  Sanction.ts  Session.ts  User.ts
server/: Dockerfile  app.py  cleanup.py  config.py  conversation_service.py  database.py  document_service.py  document_verification_service.py  m1.py  main.py  models.py  pyproject.toml  services.py  session_service.py
(+16 files in other folders)
