[project]
name = "vittam-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.26",
    "fastapi>=0.124.4",
    "langchain>=1.2.0",
    "langchain-mongodb>=0.9.0",
    "langchain-openai>=1.1.3",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.38.0",
]
